// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select (isCI = false) > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > down arrow selects next option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > renders option hints 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > renders option labels 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > renders options and message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > up arrow selects previous option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > down arrow selects next option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > renders option hints 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > renders option labels 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > renders options and message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > up arrow selects previous option 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "[999D[5A",
  "[2B",
  "[J",
  "[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "[999D[5A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "[?25h",
]
`;
